unpackaged/main/default/objects/ServiceResource/fields/AdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInfo__c</fullName>
    <label>AdditionalInfo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>