unpackaged/main/default/objects/ServiceResource/fields/Alt_Email__c.field-meta.xml
<CustomField>
    <fullName>Alt_Email__c</fullName>
    <description>Alternative email</description>
    <label>Alt Email</label>
    <type>Email</type>
</CustomField>