unpackaged/main/default/objects/ServiceResource/fields/Alt_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alt_Phone__c</fullName>
    <description>Alternative Phone Number</description>
    <label>Alt Phone</label>
    <type>Phone</type>
</CustomField>