unpackaged/main/default/objects/ServiceResource/fields/Area_Manager_Filter__c.field-meta.xml
<CustomField>
    <fullName>Area_Manager_Filter__c</fullName>
    <label>Area Manager Filter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Area Manager</fullName>
            </value>
            <value>
                <fullName>Alexander S Frisch</fullName>
            </value>
            <value>
                <fullName>Brian L Swogger</fullName>
            </value>
            <value>
                <fullName>Chris Nelson</fullName>
            </value>
            <value>
                <fullName>Dameond Jones</fullName>
            </value>
            <value>
                <fullName>Daniel Morgan</fullName>
            </value>
            <value>
                <fullName>Danny Nguyen</fullName>
            </value>
            <value>
                <fullName>Frank P Ardelean Jr</fullName>
            </value>
            <value>
                <fullName>Gary Lady</fullName>
            </value>
            <value>
                <fullName>Gordon Martin</fullName>
            </value>
            <value>
                <fullName>Jagpreet Singh</fullName>
            </value>
            <value>
                <fullName>Jeremy Jaques</fullName>
            </value>
            <value>
                <fullName>Joel Solis</fullName>
            </value>
            <value>
                <fullName>Jonathan Arient</fullName>
            </value>
            <value>
                <fullName>Jonathon Young</fullName>
            </value>
            <value>
                <fullName>Jose Luis Flores</fullName>
            </value>
            <value>
                <fullName>Joseph Ellis</fullName>
            </value>
            <value>
                <fullName>Manoz Narwal</fullName>
            </value>
            <value>
                <fullName>Michael A Rochelle</fullName>
            </value>
            <value>
                <fullName>Omar Al-Bess</fullName>
            </value>
            <value>
                <fullName>Rajdeep Bains</fullName>
            </value>
            <value>
                <fullName>Robert D Miller</fullName>
            </value>
            <value>
                <fullName>Talaat Soueid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>