unpackaged/main/default/objects/ServiceResource/fields/AreaManager__c.field-meta.xml
<CustomField>
    <fullName>AreaManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AreaManager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Area Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Technicians</relationshipName>
    <type>Lookup</type>
</CustomField>