unpackaged/main/default/objects/ServiceResource/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <inlineHelpText>Obtain info from the Regional Manager or BFS/USFO Subcontractor</inlineHelpText>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>