unpackaged/main/default/objects/ServiceResource/fields/ContractID__c.field-meta.xml
<CustomField>
    <fullName>ContractID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContractID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Service_Type__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Contract ID</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipLabel>Technicians (ContractID)</relationshipLabel>
    <relationshipName>Technicians1</relationshipName>
    <type>Lookup</type>
</CustomField>