unpackaged/main/default/objects/ServiceResource/fields/Dedicated_Technician__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Technician__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dedicated Technician</label>
    <type>Checkbox</type>
</CustomField>