unpackaged/main/default/objects/ServiceResource/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <description>JDE ID# reference for Technician</description>
    <label>Employee ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>