unpackaged/main/default/objects/ServiceResource/fields/EngineerType__c.field-meta.xml
<CustomField>
    <fullName>EngineerType__c</fullName>
    <label>Engineer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BIR Internal</fullName>
            </value>
            <value>
                <fullName>FLM Internal</fullName>
            </value>
            <value>
                <fullName>Ledcor</fullName>
            </value>
            <value>
                <fullName>BIR Contractor</fullName>
            </value>
            <value>
                <fullName>FLM Contractor</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
                <isActive>false</isActive>
                <label>Contractor</label>
            </value>
            <value>
                <fullName>Contractor - BTV</fullName>
                <isActive>false</isActive>
                <label>Contractor - BTV</label>
            </value>
            <value>
                <fullName>Contractor - EFI</fullName>
                <isActive>false</isActive>
                <label>Contractor - EFI</label>
            </value>
            <value>
                <fullName>Contractor - Rogers Drops</fullName>
                <isActive>false</isActive>
                <label>Contractor - Rogers Drops</label>
            </value>
            <value>
                <fullName>Ledcor - BTV</fullName>
                <isActive>false</isActive>
                <label>Ledcor - BTV</label>
            </value>
            <value>
                <fullName>Ledcor - EFI</fullName>
                <isActive>false</isActive>
                <label>Ledcor - EFI</label>
            </value>
            <value>
                <fullName>Ledcor - Rogers Drops</fullName>
                <isActive>false</isActive>
                <label>Ledcor - Rogers Drops</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>