unpackaged/main/default/objects/ServiceResource/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <inlineHelpText>Obtain info from Josee or BFS/USFO Subcontractor</inlineHelpText>
    <label>Group</label>
    <length>125</length>
    <type>Text</type>
</CustomField>