unpackaged/main/default/objects/ServiceResource/fields/Homebase__c.field-meta.xml
<CustomField>
    <fullName>Homebase__c</fullName>
    <formula>IF(
Address__c = Address__r.Id,
Address__r.Street &amp; BR() +
Address__r.City + &quot;, &quot; + Address__r.State &amp; BR() +
Address__r.PostalCode
,&quot;No Address Associated&quot;
)</formula>
    <label>Homebase</label>
    <type>Text</type>
</CustomField>