unpackaged/main/default/objects/ServiceResource/fields/Max_Travel_Distance__c.field-meta.xml
<CustomField>
    <fullName>Max_Travel_Distance__c</fullName>
    <label>Max Travel Distance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50 KM</fullName>
            </value>
            <value>
                <fullName>75 KM</fullName>
            </value>
            <value>
                <fullName>100 KM</fullName>
            </value>
            <value>
                <fullName>125 KM</fullName>
            </value>
            <value>
                <fullName>150 KM</fullName>
            </value>
            <value>
                <fullName>175 KM</fullName>
            </value>
            <value>
                <fullName>200 KM</fullName>
            </value>
            <value>
                <fullName>225 KM</fullName>
            </value>
            <value>
                <fullName>250 KM</fullName>
            </value>
            <value>
                <fullName>275 KM</fullName>
            </value>
            <value>
                <fullName>300 KM</fullName>
            </value>
            <value>
                <fullName>325 KM</fullName>
            </value>
            <value>
                <fullName>350 KM</fullName>
            </value>
            <value>
                <fullName>375 KM</fullName>
            </value>
            <value>
                <fullName>400 KM</fullName>
            </value>
            <value>
                <fullName>425 KM</fullName>
            </value>
            <value>
                <fullName>450 KM</fullName>
            </value>
            <value>
                <fullName>475 KM</fullName>
            </value>
            <value>
                <fullName>500 KM</fullName>
            </value>
            <value>
                <fullName>550 KM</fullName>
            </value>
            <value>
                <fullName>600 KM</fullName>
            </value>
            <value>
                <fullName>650 KM</fullName>
            </value>
            <value>
                <fullName>700 KM</fullName>
            </value>
            <value>
                <fullName>750 KM</fullName>
            </value>
            <value>
                <fullName>800 KM</fullName>
            </value>
            <value>
                <fullName>900 KM</fullName>
            </value>
            <value>
                <fullName>1000 KM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>