unpackaged/main/default/objects/ServiceResource/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <inlineHelpText>Please enter a valid 11-digit phone number, ex 19991234567</inlineHelpText>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>