unpackaged/main/default/objects/ServiceResource/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <inlineHelpText>Obtain info from Regional Manager or BFS/USFO Subcontractor</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WORK MARKET INC.</fullName>
            </value>
            <value>
                <fullName>INSPYR SOLUTIONS LLC</fullName>
            </value>
            <value>
                <fullName>AP - PO</fullName>
            </value>
            <value>
                <fullName>COSERVE GLOBAL SOLUTIONS, LLC</fullName>
            </value>
            <value>
                <fullName>DIRECT PAY</fullName>
            </value>
            <value>
                <fullName>Others - TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>