unpackaged/main/default/objects/ServiceResource/fields/Return_to_Work__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Work__c</fullName>
    <description>Date of Tech return to work after leave</description>
    <label>Return to Work</label>
    <type>Date</type>
</CustomField>