unpackaged/main/default/objects/ServiceResource/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Service_Type__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Service Type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipLabel>Technicians</relationshipLabel>
    <relationshipName>Technicians</relationshipName>
    <type>Lookup</type>
</CustomField>