unpackaged/main/default/objects/ServiceResource/fields/Tech_on_Leave__c.field-meta.xml
<CustomField>
    <fullName>Tech_on_Leave__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Account will be deactivated after 3 months on Leave</inlineHelpText>
    <label>Tech on Leave</label>
    <type>Checkbox</type>
</CustomField>