unpackaged/main/default/objects/ServiceResource/fields/Work_Market_ID__c.field-meta.xml
<CustomField>
    <fullName>Work_Market_ID__c</fullName>
    <description>Obtain info from Regional Manager or BFS/USFO Subcontractor</description>
    <label>Work Market ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>