unpackaged/main/default/objects/ServiceResource/validationRules/Cannot_Update_Technician_Object.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_Technician_Object</fullName>
    <active>true</active>
    <description>Updating the following fields is not allowable:
Name</description>
    <errorConditionFormula>$UserRole.Name &lt;&gt; &#39;Admin&#39;
&amp;&amp;
ISCHANGED( Name )</errorConditionFormula>
    <errorMessage>You are not authorized to make these changes</errorMessage>
</ValidationRule>