unpackaged/main/default/objects/ServiceResource/validationRules/Leave_Flag.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_Flag</fullName>
    <active>true</active>
    <description>Must Flag when date added</description>
    <errorConditionFormula>IF(ISBLANK( Return_to_Work__c ),  Tech_on_Leave__c = true, Tech_on_Leave__c = false)</errorConditionFormula>
    <errorDisplayField>Tech_on_Leave__c</errorDisplayField>
    <errorMessage>Must check Tech on Leave or enter the return date</errorMessage>
</ValidationRule>