unpackaged/main/default/objects/ServiceResource/validationRules/Phone_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Format</fullName>
    <active>true</active>
    <description>Restricted Mobile Phone number format</description>
    <errorConditionFormula>OR(
AND( NOT(ISBLANK( MobilePhone__c )),!REGEX( MobilePhone__c,&quot;^\\d{11}?$&quot;)),
AND( NOT(ISBLANK(  Alt_Phone__c  )),!REGEX( Alt_Phone__c,&quot;^\\d{11}?$&quot;))
)</errorConditionFormula>
    <errorDisplayField>MobilePhone__c</errorDisplayField>
    <errorMessage>Please enter a valid 11-digit phone number, ex 19991234567</errorMessage>
</ValidationRule>