unpackaged/main/default/objects/ServiceResource/validationRules/Tech_on_Leave.validationRule-meta.xml
<ValidationRule>
    <fullName>Tech_on_Leave</fullName>
    <active>false</active>
    <description>Inactive tech cannot be on Leave</description>
    <errorConditionFormula>Tech_on_Leave__c = NULL</errorConditionFormula>
    <errorDisplayField>Tech_on_Leave__c</errorDisplayField>
    <errorMessage>Inactive tech cannot be on Leave</errorMessage>
</ValidationRule>