unpackaged/main/default/objects/ServiceResource/listViews/All_Technicians_Main.listView-meta.xml
<ListView>
    <fullName>All_Technicians_Main</fullName>
    <columns>Name</columns>
    <columns>Employee_ID__c</columns>
    <columns>ContractID__c</columns>
    <columns>EngineerType__c</columns>
    <columns>IsActive</columns>
    <columns>Max_Travel_Distance__c</columns>
    <columns>AreaManager__c</columns>
    <columns>Safety__c</columns>
    <columns>Email__c</columns>
    <columns>Address__c</columns>
    <columns>MobilePhone__c</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Technicians (Main)</label>
    <sharedTo>
        <group>Area_Managers</group>
        <group>Dispatcher_Group</group>
    </sharedTo>
</ListView>