unpackaged/main/default/objects/ServiceResource/listViews/All_Technicians_Planner.listView-meta.xml
<ListView>
    <fullName>All_Technicians_Planner</fullName>
    <columns>Name</columns>
    <columns>Employee_ID__c</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>RelatedRecord</columns>
    <columns>Max_Travel_Distance__c</columns>
    <columns>AreaManager__c</columns>
    <columns>Safety__c</columns>
    <columns>Email__c</columns>
    <columns>Description</columns>
    <filterScope>Everything</filterScope>
    <label>All Technicians (Planner)</label>
    <sharedTo>
        <group>Planner_Access</group>
    </sharedTo>
</ListView>