unpackaged/main/default/objects/ServiceResource/listViews/My_Technician_11.listView-meta.xml
<ListView>
    <fullName>My_Technician_11</fullName>
    <columns>Name</columns>
    <columns>Employee_ID__c</columns>
    <columns>ResourceType</columns>
    <columns>IsActive</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>RelatedRecord</columns>
    <columns>Max_Travel_Distance__c</columns>
    <columns>AreaManager__c</columns>
    <columns>Safety__c</columns>
    <columns>Email__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Technician</label>
    <sharedTo>
        <group>Dispatcher_Group</group>
    </sharedTo>
</ListView>